commented .project in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ buildNumber.properties
 
 # Eclipse m2e generated files
 # Eclipse Core
-.project
+#.project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 # Eclipse project settings
